[gd_scene load_steps=2 format=3 uid="uid://cby3os2glkdab"]

[ext_resource type="Script" path="res://initial_screen.gd" id="1_qlhwa"]

[node name="InitialScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qlhwa")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.0
offset_top = 64.0
offset_right = 131.0
offset_bottom = 96.0
grow_horizontal = 2
text = "Sistema de Gestión Gastronomico"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Login" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 160.0
offset_right = 96.0
offset_bottom = 224.0
grow_horizontal = 2
text = "Iniciar Sesión"

[node name="Register" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 240.0
offset_right = 96.0
offset_bottom = 304.0
grow_horizontal = 2
text = "Registrarse"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 320.0
offset_right = 96.0
offset_bottom = 384.0
grow_horizontal = 2
text = "Salir"

[connection signal="pressed" from="Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
